force-app/main/default/objects/Delete_Audit__c/Delete_Audit__c.object-meta.xml
<CustomObject>
    <label>Delete Audit</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delete Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>