force-app/main/default/objects/Delete_Audit__c/fields/COT_1__c.field-meta.xml
<CustomField>
    <fullName>COT_1__c</fullName>
    <label>COT_1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>