force-app/main/default/objects/Delete_Audit__c/fields/COT_2__c.field-meta.xml
<CustomField>
    <fullName>COT_2__c</fullName>
    <label>COT_2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>