force-app/main/default/objects/Delete_Audit__c/fields/Deleted_SFDCID__c.field-meta.xml
<CustomField>
    <fullName>Deleted_SFDCID__c</fullName>
    <label>Deleted SFDCID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>