force-app/main/default/objects/Delete_Audit__c/fields/ECC_USE_ID__c.field-meta.xml
<CustomField>
    <fullName>ECC_USE_ID__c</fullName>
    <label>ECC_USE_ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>