force-app/main/default/objects/Delete_Audit__c/fields/IDN_ID__c.field-meta.xml
<CustomField>
    <fullName>IDN_ID__c</fullName>
    <label>IDN_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>