force-app/main/default/objects/Delete_Audit__c/fields/IDN_Name__c.field-meta.xml
<CustomField>
    <fullName>IDN_Name__c</fullName>
    <label>IDN_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>