force-app/main/default/objects/Delete_Audit__c/fields/Local_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Account_Name__c</fullName>
    <label>Local Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>