force-app/main/default/objects/Delete_Audit__c/fields/Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID__c</fullName>
    <label>Parent_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>