force-app/main/default/objects/Delete_Audit__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <label>Parent_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>