force-app/main/default/objects/Delete_Audit__c/fields/ParentID__c.field-meta.xml
<CustomField>
    <fullName>ParentID__c</fullName>
    <label>ParentID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>