force-app/main/default/objects/Delete_Audit__c/fields/PARTY_MK__c.field-meta.xml
<CustomField>
    <fullName>PARTY_MK__c</fullName>
    <label>PARTY_MK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>