force-app/main/default/objects/Delete_Audit__c/fields/ShippingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountryCode__c</fullName>
    <label>ShippingCountryCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>