force-app/main/default/objects/Delete_Audit__c/fields/ShippingStateCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingStateCode__c</fullName>
    <label>ShippingStateCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>