force-app/main/default/objects/Delete_Audit__c/fields/ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet__c</fullName>
    <label>ShippingStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>