force-app/main/default/objects/Delete_Audit__c/fields/SKA_ID__c.field-meta.xml
<CustomField>
    <fullName>SKA_ID__c</fullName>
    <label>SKA_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>