force-app/main/default/objects/Delete_Audit__c/fields/WA_ID__c.field-meta.xml
<CustomField>
    <fullName>WA_ID__c</fullName>
    <label>WA_ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>