force-app/main/default/objects/Delete_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>COT_1__c</columns>
    <columns>COT_2__c</columns>
    <columns>PARTY_MK__c</columns>
    <columns>ShippingCity__c</columns>
    <columns>ShippingStateCode__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>