force-app/main/default/objects/Delete_Audit__c/listViews/All_Deletes_from_Merges.listView-meta.xml
<ListView>
    <fullName>All_Deletes_from_Merges</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Deleted_SFDCID__c</columns>
    <columns>PARTY_MK__c</columns>
    <columns>SKA_ID__c</columns>
    <columns>ShippingStreet__c</columns>
    <columns>ShippingCity__c</columns>
    <columns>ShippingStateCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>MERGE</value>
    </filters>
    <label>All Deletes from Merges</label>
</ListView>